# MvWebRec

./: .gitignore  README.md  README.zh-CN.md  config.yaml  config_ablation.yaml  config_baseline.yaml  demo.py  pyproject.toml  requirements-lock.txt  requirements.txt  train.py
.cursor/rules/: mvwebrec-git-readme.mdc
data/: download_ml100k.sh  preprocessing.py
docs/: improvement.md
scripts/: download_ml100k.sh
src/hetubv_gcl/: __init__.py  demo.py  train.py
src/hetubv_gcl/datasets/: __init__.py
src/hetubv_gcl/models/: __init__.py
src/hetubv_gcl/utils/: seed.py
src/mvwebrec/: __init__.py  demo.py  paths.py  train.py
src/mvwebrec/datasets/: __init__.py  preprocessing.py
src/mvwebrec/models/: __init__.py  lightgcn.py
src/mvwebrec/visualization/: plot_tsne.py
tests/: conftest.py  test_graph_views.py  test_losses.py  test_metrics.py
utils/: graph_views.py  losses.py  metrics.py
visualization/: plot_views.py
