[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hetubv-gcl"
version = "0.1.0"
description = "HetUBV-GCL: heterogeneous user behavior views in web usage mining via graph contrastive learning (MovieLens)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
